# Credit-Score-Modelling

./: .gitignore  pyproject.toml  requirements.txt
artifacts/logistic_opt10_2025-06-09_08-10-52/: best_params.json  model.pkl
artifacts/rf_opt10_2025-06-09_08-03-20/: best_params.json
artifacts/xgb_opt20_2025-06-09_07-30-05/: best_params.json  cleaning_meta.pkl  deciles_test.csv  deciles_val.csv  model.pkl  preprocessor.pkl
docs/: dataset_overview.md
notebooks/: 01_split_data.ipynb  02_EDA.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_model_evaluation.ipynb
src/credit_score/app/: main.py
src/credit_score/features/: __init__.py  cleaning.py  engineering.py  load_data.py  pipeline.py  selectors.py
src/credit_score/models/: evaluate.py  train.py
tests/: test_cleaning.py  test_engineering.py  test_pipeline.py
