[project]
name = "credit score modelling"
version = "0.1.0"
description = "credit score modelling for a bank institution"
authors = [{name = "Hubert Murawski"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
